@@ -1,6 +1,8 @@
 0.1.8
 ------------------------------------------------------------------------
 Fix PPM color preview extraction.
+Updated to libraw 0.6.8:
+ - Changes in QuickTake 100 files processing.
 Updated to libraw 0.6.7:
  -Added support for Samsung S85.
  -Changes in external jpeg (metadata) processing.
